--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   hive_flutter: ^1.1.0
   flutter_bloc: ^8.1.6
+  path_provider: ^2.1.4
 
 dev_dependencies:
   flutter_test:
