--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   hive_flutter: ^1.1.0
   flutter_bloc: ^8.1.6
   path_provider: ^2.1.4
+  gap: ^3.0.1
 
 dev_dependencies:
   flutter_test:
