--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,8 @@ dependencies:
   flutter_bloc: ^8.1.6
   path_provider: ^2.1.4
   gap: ^3.0.1
-  timelines: ^0.1.0
-
+  timeline_tile: ^2.0.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
